--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,48 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
+
+    <!-- Strings related to Settings -->
+    <string name="pref_header_about">About</string>
+    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
+    <string name="app_version">1.0</string>
+    <string name="summary_support">Got any queries? We are happy to help!</string>
+    <string name="title_send_feedback">Send Feedback</string>
+    <string name="title_faq">FAQ</string>
+    <string name="summary_faq">View frequently asked questions</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="url_privacy">https://www.abc.com/privacy-policy/</string>
+    <string name="title_terms">Terms &amp; Conditions</string>
+    <string name="url_terms">https://www.abc.com/terms-of-service/</string>
+    <string name="title_version">Version</string>
+    <string name="choose_email_client">Choose email client</string>
+    <string name="title_new_notification_sound">New message notification</string>
+    <string name="title_vibrate">Vibrate</string>
+    <string name="summary_vibrate">Vibrate on new notification</string>
+    <string name="notifications_new_message">notifications_new_message</string>
+    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
+    <string name="key_vibrate">key_vibrate</string>
+    <string name="key_send_feedback">key_send_feedback</string>
+
+
+
+    <!-- slider preference -->
+    <string name="slider_title">Distance</string>
+    <string-array name="slider_summaries">
+        <!-- You can define as many summaries as you'd like -->
+        <!-- The active summary will reflect the preference's current value -->
+        <item>0 - 10 kms</item>
+        <item>10 - 20 kms</item>
+        <item>20 - 30 kms</item>
+        <item>30 - 40 kms</item>
+        <item>40 - 50 kms</item>
+        <item>50 - 60 kms</item>
+        <item>60 - 70 kms</item>
+        <item>70 - 80 kms</item>
+        <item>80 - 90 kms</item>
+        <item>90 - 100 kms</item>
+
+    </string-array>
+    <item name="slider_default" format="float" type="string">0.1</item>
+    <string name="slider_message">Select Range</string>
 </resources>
