--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <item name="slider_default" format="float" type="string">0.1</item>
     <string name="slider_message">Select Range</string>
     <string name="swipe_instruction"><![CDATA[<   SWIPE   >]]></string>
+    <string name="title_activity_posted_ads">PostedAdsActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
