1. Rate us 2. Contact buttons changed to icons 3. Share 4. Added show all ads preference 5. Swipe to refresh added 6. Click on location address in ad preview to see location on map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,10 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="show_all_ads_key">key_show_all_ads</string>
+    <string name="show_all_ads_title">Show all Ads</string>
+    <string name="show_all_ads_summary_on">Showing all Ads</string>
+    <string name="show_all_ads_summary_off">Showing Ads nearby</string>
+
+    <string name="string_share_text">Now get easy access to stationery products nearby you. Download the app now!\n</string>
 </resources>
