--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">K2PSap</string>
+    <string name="app_name">Book Xtore</string>
     <string name="title_activity_parent">ParentActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
